# kilojoule

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Editor.hpp  Terminal.hpp  constants.hpp
src/: Editor.cpp  Terminal.cpp  main.cpp
